--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,12 @@ langchain-community = "^0.2.5"
 langchain-openai = "^0.1.9"
 unstructured = {extras = ["md"], version = "^0.14.7"}
 chromadb = "^0.5.3"
-sdk-practice = "^0.1.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[virtualenvs]
+in-project = true
