--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,10 @@ langchain-community = "^0.2.5"
 langchain-openai = "^0.1.9"
 unstructured = {extras = ["md"], version = "^0.14.7"}
 chromadb = "^0.5.3"
+isort = "^5.13.2"
 
+[tool.isort]
+profile = "black"
 
 [build-system]
 requires = ["poetry-core"]
